tdf#162750 sw: Fix layout with small caps inside ligatures

Previously, Writer was not correctly terminating layout contexts at the
starts of small caps spans. This could cause incorrect character
placement in certain cases.

Regression since:

Commit 30d376fb7ded4c96c85ad1112a0e44b5929657c9
    "tdf#61444 Correct Writer text layout across formatting changes"

and

Commit ab0a4543cab77ae0c7c0a79feb8aebab71163dd7
    "tdf#124116 Correct Writer text shaping across formatting changes"

Change-Id: I863b9b66356eb0a9efb5bbdc75e80b43d56aaaf0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177839
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit dfa81bdb3a7956d631c8ccb1e00166289d37993e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177865
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>