sw/source/core/text/itrform2.cxx
@@ -1392,6 +1392,8 @@ SwTextPortion *SwTextFormatter::NewTextPortion( SwTextFormatInfo &rInf )
 
     // until next attribute change:
     const TextFrameIndex nNextAttr = GetNextAttr();
+    // until next layout-breaking attribute change:
+    const TextFrameIndex nNextLayoutBreakAttr = GetNextLayoutBreakAttr();
     // end of script type:
     const TextFrameIndex nNextScript = m_pScriptInfo->NextScriptChg(rInf.GetIdx());
     // end of direction:
@@ -1401,7 +1403,7 @@ SwTextPortion *SwTextFormatter::NewTextPortion( SwTextFormatInfo &rInf )
     // bookmarks
     const TextFrameIndex nNextBookmark = m_pScriptInfo->NextBookmark(rInf.GetIdx());
 
-    auto nNextContext = std::min({ nNextChg, nNextScript, nNextDir });
+    auto nNextContext = std::min({ nNextChg, nNextLayoutBreakAttr, nNextScript, nNextDir });
     nNextChg = std::min({ nNextChg, nNextAttr, nNextScript, nNextDir, nNextHidden, nNextBookmark });
 
     // Turbo boost:
